# OnkyoRemote

./: .travis.yml  CMakeLists.txt  ISCP-V1.21_2011.ods  ISCP.cpp  ISCP.h  Network.cpp  Network.h  OnkyoRemote.cpp  OnkyoRemote.h  OnkyoRemote.kdev4  README.md  deviceinfo.cpp  deviceinfo.h  iscpmessage.cpp  iscpmessage.h  main.cpp
src/: Network.cpp  Network.h  OnkyoRemote.cpp  OnkyoRemote.h  OnkyoRemote.qrc  PlayList.cpp  PlayList.h  deviceinfo.cpp  iscpmessage.cpp  iscpmessage.h  main.cpp
